--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ Too many things for slide
 
 
 </textarea>
-<script src="//gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript"></script>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript"></script>
 <script type="text/javascript">
   var hljs = remark.highlighter.engine;
   
